Introduced AWB JAXB bundle + some adjustments for JAVA 9 and newer